js/src/jit-test/tests/ion/invalidation/easy-invalidate.js
// When run with eager, invalidation will be forced immediately.

(function(o) {
    o.s;
})({});
